--- a/JavaScript practice/Index.html
+++ b/JavaScript practice/Index.html
@@ -27,7 +27,7 @@
             #color1{
                 background-color: #f90;
             }
-        #color1{
+        #color2{
   background-color:#red;
         }
 
@@ -37,7 +37,7 @@
     <body>
         <div id="color0" class='color'></div> 
         <div id="color1" class='color'></div> 
-
+ <div id="color2" class='color'></div>
         <div id='circle1' class='circle'></div>
         <div id='circle2' class='circle'></div>
         <div id='circle3' class='circle'></div>
